--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^9.10.0",
+    "jest": "^29.1.1",
+    "mocha": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
+    "ts-jest": "^29.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest --forceExit",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -34,5 +38,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.19.3",
+    "@babel/preset-env": "^7.19.3",
+    "babel-jest": "^29.1.0",
+    "cypress": "^10.9.0"
+  },
+  "transform": {
+    "\\.[jt]sx?$": "babel-jest"
   }
 }
