--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.10.0",
-    "jest": "^29.1.1",
+    "jest": "^24.7.1",
     "mocha": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "3.0.1",
     "ts-jest": "^29.0.3",
     "web-vitals": "^2.1.4"
   },
@@ -42,7 +42,7 @@
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@babel/preset-env": "^7.19.3",
-    "babel-jest": "^29.1.0",
+    "babel-jest": "^24.8.0",
     "cypress": "^10.9.0"
   },
   "transform": {
