--- a/package.json
+++ b/package.json
@@ -5,21 +5,11 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
-<<<<<<< HEAD
     "@mui/material": "^5.10.7",
-=======
-    "@mui/material": "^5.10.8",
->>>>>>> abea651551b5f0eca4655bb4581a637862ea9a8d
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.10.0",
-    "jest": "^24.7.1",
-    "mocha": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "3.0.1",
-    "ts-jest": "^29.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -49,8 +39,14 @@
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@babel/preset-env": "^7.19.3",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "babel-jest": "^24.9.0",
-    "cypress": "^10.9.0"
+    "cypress": "^10.9.0",
+    "mocha": "^10.0.0",
+    "react-router-dom": "^6.4.2",
+    "ts-jest": "^29.0.3"
   },
   "transform": {
     "\\.[jt]sx?$": "babel-jest"
