--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
-
+        "module": "es2022",
+        "moduleResolution": "node",
         "jsx": "react",
         "target": "es2022",
         "checkJs": true
