--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.10",
+    "@reduxjs/toolkit": "^1.9.1",
     "bootstrap": "^5.2.2",
     "firebase": "^9.10.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-scripts": "3.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -47,7 +49,7 @@
     "babel-jest": "^24.9.0",
     "cypress": "^10.9.0",
     "mocha": "^10.0.0",
-    "react-router-dom": "^6.4.2",
+    "react-router-dom": "^6.4.5",
     "ts-jest": "^29.0.3"
   },
   "transform": {
